2010-11-16  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Updated Extbase and Fluid to 1.3.0beta1. See their ChangeLog for details.

2010-11-16  Steffen Kamper  <steffen@typo3.org>

	* Added feature #16396: Implement a Grid View + wizard to enable the backend layout to be adapted to the frontend look and feel (Thanks to Joey Hasenau, Martin Ficzel and Thomas Hempel)

2010-11-15  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #14658: Feature: internal links with parameters outside the RTE (headlines, images ...)
	* Fixed bug #16383: BE Module are complicate to render

2010-11-15  Oliver Hader  <oliver@typo3.org>

	* Add feature #16374: Implement Inline Relational Record Editing (IRRE) in Workspaces

2010-11-15  Ernesto Baschny  <ernst@cron-it.de>

	* Added feature #16170: Increase DB-fields spaceBefore and spaceAfter (tt_content) (Thanks to Henrik Ziegenhain)

2010-11-14  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #16315: Wrong reference to unzip class

2010-11-14  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL to version 1.2.0beta1
	* Added feature #16215: Allow array as localconf.php configuration values

2010-11-13  Ernesto Baschny  <ernst@cron-it.de>

	* Added feature #15666: sys_language table icon should be the flag you selected, using the new flag sprite (Thanks to Steffen Ritter)
	* Follow-up to #16302: Fixes missing tplRow leading to a broken "Edit TypoScript file content in t3editor" (Thanks to Fabrizio Branca)

2010-11-13  Benjamin Mack  <benni@typo3.org>

	* Added feature: New option "noScale" for getImgResource() to display the original image instead of a scaled one (Thanks to Stefan Geith)
	* Fixed bug #7855: IRRE doesn't save collapse/expand state of nested IRRE records
	* Fixed bug #9508: Workspace preview link should work in multidomain-environments (Thanks to Michael Klapper)
	* Added feature #13170: Workspace Owners should be manageable with groups as well (Thanks to Tolleiv Nietsch)
