@@ -70,6 +70,13 @@ TYPO3.Viewport = Ext.extend(Ext.Viewport, {
 	NavigationContainer: null,
 
 	/**
+	 * The iframe navigation component
+	 *
+	 * @var TYPO3.iframePanel
+	 */
+	NavigationIframe: null,
+
+	/**
 	 * The module menu area
 	 *
 	 * @var Ext.Panel
@@ -100,6 +107,7 @@ TYPO3.Viewport = Ext.extend(Ext.Viewport, {
 
 		this.ContentContainer = Ext.getCmp('typo3-contentContainer');
 		this.NavigationContainer = Ext.getCmp('typo3-navigationContainer');
+		this.NavigationIframe = Ext.getCmp('typo3-navigationIframe');
 		this.Topbar = Ext.getCmp('typo3-topbar');
 		this.ModuleMenuContainer = Ext.getCmp('typo3-module-menu');
 		this.DebugConsole = Ext.getCmp('typo3-debug-console');
@@ -125,74 +133,6 @@ TYPO3.Viewport = Ext.extend(Ext.Viewport, {
 			}
 		);
 	},
-
-	/**
-	 * Loads a module into the content container
-	 *
-	 * @param mainModuleName string name of the main module (e.g. web)
-	 * @param subModuleName string name of the sub module (e.g. page)
-	 * @param contentScript string the content provider (path to a php script)
-	 * @return void
-	 */
-	loadModule: function(mainModuleName, subModuleName, contentScript) {
-		var navigationWidgetActive = false;
-		var widgetMainModule = '';
-		var widgetSubModule = '';
-		var widget = null;
-		for (var widgetId in this.navigationWidgetMetaData) {
-			widgetMainModule = this.navigationWidgetMetaData[widgetId].mainModule;
-			widgetSubModule = this.navigationWidgetMetaData[widgetId].subModule;
-			widget = this.navigationWidgetMetaData[widgetId].widget;
-
-			if ((widgetMainModule === mainModuleName || widgetMainModule === '*') &&
-				(widgetSubModule === subModuleName || widgetSubModule === '*')
-			) {
-				widget.show();
-				navigationWidgetActive = true;
-			} else {
-				widget.hide();
-			}
-		}
-
-		if (navigationWidgetActive) {
-			this.NavigationContainer.show();
-		} else {
-			this.NavigationContainer.hide();
-		}
-
-		// append the typo3 path if it wasn't already applied
-		// this is important for backwards compatibility (e.g. shortcuts)
-		if (contentScript.indexOf(top.TS.PATH_typo3) !== 0) {
-			contentScript = top.TS.PATH_typo3 + contentScript;
-		}
-		this.ContentContainer.setUrl(contentScript);
-		
-		this.NavigationContainer.ownerCt.doLayout();
-	},
-
-	/**
-	 * Adds the given widget to the navigation container. The key will be the id attribute
-	 * of the given widget.
-	 *
-	 * @param mainModule string main module or wildcard (*) for all
-	 * @param subModule string sub module or wildcard (*) for all
-	 * @param widget object ExtJS widget (e.g. an Ext.Panel); must contain an id attribute!
-	 * @return void
-	 */
-	registerNavigationWidget: function(mainModule, subModule, widget) {
-			// only one instance of specific widget may be exists!
-		if (this.navigationWidgetMetaData[widget.id] === undefined) {
-			this.navigationWidgetMetaData[widget.id] = {
-				mainModule: mainModule,
-				subModule: subModule,
-				widget: widget
-			};
-
-				// always take the full width and height
-			widget.anchor = '100% 100%';
-			this.NavigationContainer.add(widget);
-		}
-	}
 });
 
 Ext.reg('typo3Viewport', TYPO3.Viewport);
