@@ -4,6 +4,7 @@
 
 2010-11-16  Steffen Kamper  <steffen@typo3.org>
 
+	* Added feature #16408: Support for Custom Navigation Components (Thanks to Stefan Galinski)
 	* Added feature #16396: Implement a Grid View + wizard to enable the backend layout to be adapted to the frontend look and feel (Thanks to Joey Hasenau, Martin Ficzel and Thomas Hempel)
 
 2010-11-15  Steffen Kamper  <steffen@typo3.org>
